Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#8977 closed bug (fixed)

Haiku hrevr1alpha4-44594 KDL

Reported by: Robert S. Owned by: axeld
Priority: normal Milestone: R1
Component: File Systems/BFS Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #8980
Platform: All

Description

I got an KDL in Haiku hrevr1alpha4-44594, it seems that the BFS is responsible (but not sure).

stack trace for thread 17 "block notifier/writer"
    kernel stack: 0x8192f000 to 0x81933000
frame               caller     <image>:function + offset
0 819326e8 (+  48) 800949e0   <kernel_x86> invoke_command_trampoline( [34m0x81932780 [0m) + 0x001c
1 81932718 (+  12) 8012ad86   <kernel_x86>:arch_debug_call_with_fault_handler + 0x001b
2 81932724 (+  48) 80093976   <kernel_x86>:debug_call_with_fault_handler + 0x005e
3 81932754 (+  64) 80094c39   <kernel_x86>:invoke_debugger_command + 0x00b9
4 81932794 (+  64) 80094a65   <kernel_x86> invoke_pipe_segment(debugger_command_pipe*: [34m0xcce38030 [0m, int32: [34m0 [0m, [34m0x0 [0m [31m"<NULL>" [0m) + 0x0079
5 819327d4 (+  64) 80094da4   <kernel_x86>:invoke_debugger_command_pipe + 0x009c
6 81932814 (+  48) 80096a2c   <kernel_x86>ExpressionParser< [32m0x819328c4 [0m>::_ParseCommandPipe( [34m0x819328c0 [0m) + 0x0234
7 81932844 (+  64) 80095c4c   <kernel_x86> ExpressionParser< [32m0x819328c4 [0m>::EvaluateCommand( [34m0x8019ef60 [0m [36m"sc | qrappend" [0m, [34m0x819328c0 [0m) + 0x02d0
8 81932884 (+ 224) 80098078   <kernel_x86>:evaluate_debug_command + 0x0080
9 81932964 (+  64) 80092216   <kernel_x86> kernel_debugger_loop( [34m0x8016f777 [0m [36m"PANIC: " [0m, [34m0x8016c9e0 [0m [36m"_mutex_lock(): double lock of %p by thread %ld" [0m, [34m0x81932a10 [0m [36m"" [0m, int32: [34m3 [0m) + 0x032a
10 819329a4 (+  48) 8009246b   <kernel_x86> kernel_debugger_internal( [34m0x8016f777 [0m [36m"PANIC: " [0m, [34m0x8016c9e0 [0m [36m"_mutex_lock(): double lock of %p by thread %ld" [0m, [34m0x81932a10 [0m[36m"" [0m, int32: [34m3 [0m) + 0x0053
11 819329d4 (+  48) 80093cf0   <kernel_x86>:panic + 0x0024
12 81932a04 (+ 112) 8008838c   <kernel_x86>:_mutex_lock + 0x00dc
13 81932a74 (+ 112) 80048bb7   <kernel_x86> wait_for_notifications(block_cache*: [34m0x8280a9c0 [0m) + 0x002f
14 81932ae4 (+ 384) 80049214   <kernel_x86>:cache_sync_transaction + 0x0238
15 81932c64 (+ 224) 817290b3   <bfs> Journal< [32m0x80a7f780 [0m>::_WriteTransactionToLog( [34m0xddf5af08 [0m) + 0x0283
16 81932d44 (+  48) 81729839   <bfs> Journal< [32m0x80a7f780 [0m>::_FlushLog( [34mfalse [0m) + 0x0095
17 81932d74 (+  48) 81728e27   <bfs> Journal< [32m0x70 [0m>::_TransactionIdle(int32: [34m8 [0m, int32: [34m-2136475776 [0m, [34m0x8008862f [0m) + 0x002b
18 81932da4 (+  96) 800457ac   <kernel_x86> flush_pending_notifications(block_cache*: [34m0x8280a9c0 [0m) + 0x019c
19 81932e04 (+  64) 80045895   <kernel_x86> flush_pending_notifications() + 0x006d
20 81932e44 (+ 368) 800487dd   <kernel_x86> block_notifier_and_writer(NULL) + 0x0055
21 81932fb4 (+  48) 8007a124   <kernel_x86> common_thread_entry( [34m0x81932ff0 [0m) + 0x0080

Change History (3)

comment:1 by axeld, 13 years ago

Component: - GeneralFile Systems/BFS
Owner: changed from nobody to axeld
Status: newin-progress

comment:2 by axeld, 13 years ago

Resolution: fixed
Status: in-progressclosed

Thanks for the report, fixed in hrev44630.

comment:3 by anevilyak, 13 years ago

Blocking: 8980 added

(In #8980) Duplicate of #8977.

Note: See TracTickets for help on using tickets.