Run the transaction flusher in another thread.

* This fixes bug #8977.